--- a/.classpath
+++ b/.classpath
@@ -2,6 +2,6 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
-	<classpathentry kind="lib" path="C:/Users/Chris/Desktop/HackCWRU/jSerialComm-1.3.10.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Michael/Google Drive/workspace/BreadBoardWizard/lib/jSerialComm-1.3.10.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
